--- a/wup_3.Rmd
+++ b/wup_3.Rmd
@@ -46,6 +46,16 @@ The mean for the people in the back seat is three times as much than the people 
 
 ## Inferential Tests
 
+```{r}
+model1 <- aov(alcohol~Seat,data=davisdata)
+summary.aov(model1)
+```
+since the p value from one way anova was such a small number we are going to follow up with a Tukey HSD test.
+```{r}
+plot(TukeyHSD(model1))
+```
+
 ## Conclusions
 
+The middle back and front back confidence intervals are less than zero than the results would be significantly different.  
 
